--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -263,7 +263,7 @@ WordPress plugin cp-contact-form-with-paypal:
     location: ['/wp-content/plugins/cp-contact-form-with-paypal/README.txt']
     secure_version: '1.1.6'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/fulldisclosure/2015/Jul/49'  # CVE request http://www.openwall.com/lists/oss-security/2015/07/11/2
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9233 https://nvd.nist.gov/vuln/detail/CVE-2015-9234 http://seclists.org/fulldisclosure/2015/Jul/49 http://www.openwall.com/lists/oss-security/2015/07/11/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-slimstat:
