--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -24,20 +24,22 @@
 # CVE-2016-10085 2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573
 # CVE-2016-10105 TODO https://github.com/Piwigo/Piwigo/issues/574
 # CVE-2017-5608 2.8.6
-# CVE-2017-9452 TODO https://github.com/Piwigo/Piwigo/issues/667
-# CVE-2017-9463
-# CVE-2017-9464
+# CVE-2017-9452 2.9.1 https://github.com/Piwigo/Piwigo/issues/667
+# CVE-2017-9463 2.9.1 https://github.com/Piwigo/Piwigo/issues/705
+# CVE-2017-9464 2.9.1 https://github.com/Piwigo/Piwigo/issues/706
+# CVE-2017-9837 TODO
+# CVE-2017-9836 TODO
 # N/A           2.9.1 http://piwigo.org/releases/2.9.1
-# CVE-2017-10678 TODO https://github.com/Piwigo/Piwigo/issues/721 2017-07-01 fix isn't in any release. same applies to other CVEs below
-# CVE-2017-10679 TODO https://github.com/Piwigo/Piwigo/issues/721 https://github.com/Piwigo/Piwigo/issues/723
-# CVE-2017-10680 TODO https://github.com/Piwigo/Piwigo/issues/721
-# CVE-2017-10681 TODO https://github.com/Piwigo/Piwigo/issues/721
-# CVE-2017-10682 TODO https://github.com/Piwigo/Piwigo/issues/724
+# CVE-2017-10678 2.9.2 https://github.com/Piwigo/Piwigo/issues/721
+# CVE-2017-10679 2.9.2 https://github.com/Piwigo/Piwigo/issues/721 https://github.com/Piwigo/Piwigo/issues/723
+# CVE-2017-10680 2.9.2 https://github.com/Piwigo/Piwigo/issues/721
+# CVE-2017-10681 2.9.2 https://github.com/Piwigo/Piwigo/issues/721
+# CVE-2017-10682 2.9.2 https://github.com/Piwigo/Piwigo/issues/724
 Piwigo:
   1:
     location: ['/include/constants.php']
-    secure_version: '2.9.1'
+    secure_version: '2.9.2'
     regexp: ['define.*?PHPWG_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://piwigo.org/releases/2.9.1'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-10678 https://nvd.nist.gov/vuln/detail/CVE-2017-10679 https://nvd.nist.gov/vuln/detail/CVE-2017-10680 https://nvd.nist.gov/vuln/detail/CVE-2017-10681 https://nvd.nist.gov/vuln/detail/CVE-2017-10682 http://piwigo.org/releases/2.9.2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
