--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -22,7 +22,7 @@
 # CVE-2016-10084 2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573
 # CVE-2016-10085 2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573
 # CVE-2016-10105 2.8.5 https://github.com/Piwigo/Piwigo/issues/574
-# CVE-2017-5608 2.8.6
+# CVE-2017-5608 2.8.6 https://github.com/Piwigo/Piwigo/issues/600
 # CVE-2017-9452 2.9.1 https://github.com/Piwigo/Piwigo/issues/667
 # CVE-2017-9463 2.9.1 https://github.com/Piwigo/Piwigo/issues/705
 # CVE-2017-9464 2.9.1 https://github.com/Piwigo/Piwigo/issues/706
