--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -15,7 +15,7 @@
 # CVE-2015-1441 2.7.3/2.6.5/2.5.6 http://piwigo.org/forum/viewtopic.php?id=25016
 # CVE-2015-1517 2.7.4 http://piwigo.org/releases/2.7.4
 # CVE-2015-2034 2.7.4
-# CVE-2015-2035 2.7.4
+# CVE-2015-2035 2.7.4 http://piwigo.org/forum/viewtopic.php?id=25179
 # TODO          2.8.2 http://piwigo.org/releases/2.8.2 http://piwigo.org/forum/viewtopic.php?id=26730
 # TODO          2.8.3 http://piwigo.org/releases/2.8.3
 # CVE-2016-10083 2.8.5 http://piwigo.org/forum/viewtopic.php?id=27573
