--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -86,24 +86,35 @@
 # oC-SA-2017-001    CVE-2017-5865   9.1.3/9.0.7/8.2.9/8.1.11
 # oC-SA-2017-002    CVE-2017-5866   9.1.3/9.0.7/8.2.9/8.1.11
 # oC-SA-2017-003    CVE-2017-5867   9.1.3/9.0.7/8.2.9/8.1.11
+# oc-sa-2017-004    CVE-2017-8896   10.0.2/9.1.6/9.0.10/8.2.12
+# oc-sa-2017-005    CVE-2017-9339   10.0.2
+# oc-sa-2017-006    CVE-2017-9340   10.0.2
+# oc-sa-2017-007    CVE-2017-9338   10.0.2/9.1.6/9.0.10/8.2.12
+ownCloud 10.0:
+  1:
+    location: ['/version.php']
+    secure_version: '10.0.2'
+    regexp: ['\$OC_VersionString.*?(?P<version>10\.0\.[0-9.]+)']
+    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2017-004 https://owncloud.org/security/advisory/?id=oc-sa-2017-005 https://owncloud.org/security/advisory/?id=oc-sa-2017-006 https://owncloud.org/security/advisory/?id=oc-sa-2017-007 https://nvd.nist.gov/vuln/detail/CVE-2017-8896 https://nvd.nist.gov/vuln/detail/CVE-2017-9339 https://nvd.nist.gov/vuln/detail/CVE-2017-9340 https://nvd.nist.gov/vuln/detail/CVE-2017-9338'
+    fingerprint: detect_general
 ownCloud 9.1:
   1:
     location: ['/version.php']
-    secure_version: '9.1.3'
+    secure_version: '9.1.6'
     regexp: ['\$OC_VersionString.*?(?P<version>9\.1\.[0-9.]+)']
-    cve: 'https://owncloud.org/security/advisory/?id=oC-SA-2017-001 https://nvd.nist.gov/vuln/detail/CVE-2017-5865 https://owncloud.org/security/advisory/?id=oC-SA-2017-002 https://nvd.nist.gov/vuln/detail/CVE-2017-5866 https://owncloud.org/security/advisory/?id=oC-SA-2017-003 https://nvd.nist.gov/vuln/detail/CVE-2017-5867'
+    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2017-004 https://owncloud.org/security/advisory/?id=oc-sa-2017-007 https://nvd.nist.gov/vuln/detail/CVE-2017-8896 https://nvd.nist.gov/vuln/detail/CVE-2017-9338'
     fingerprint: detect_general
 ownCloud 9.0:
   1:
     location: ['/version.php']
-    secure_version: '9.0.7'
+    secure_version: '9.0.10'
     regexp: ['\$OC_VersionString.*?(?P<version>9\.0\.[0-9.]+)']
-    cve: 'https://owncloud.org/security/advisory/?id=oC-SA-2017-001 https://nvd.nist.gov/vuln/detail/CVE-2017-5865 https://owncloud.org/security/advisory/?id=oC-SA-2017-002 https://nvd.nist.gov/vuln/detail/CVE-2017-5866 https://owncloud.org/security/advisory/?id=oC-SA-2017-003 https://nvd.nist.gov/vuln/detail/CVE-2017-5867'
+    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2017-004 https://owncloud.org/security/advisory/?id=oc-sa-2017-005 https://owncloud.org/security/advisory/?id=oc-sa-2017-006 https://owncloud.org/security/advisory/?id=oc-sa-2017-007 https://nvd.nist.gov/vuln/detail/CVE-2017-8896 https://nvd.nist.gov/vuln/detail/CVE-2017-9339 https://nvd.nist.gov/vuln/detail/CVE-2017-9340 https://nvd.nist.gov/vuln/detail/CVE-2017-9338'
     fingerprint: detect_general
 ownCloud 8.2:
   1:
     location: ['/version.php']
-    secure_version: '9.1.3'
+    secure_version: '10.0.2'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.2\.[0-9.]+)']
     cve: 'ownCloud 8.2 is end of life.'
     fingerprint: detect_general
@@ -111,7 +122,7 @@ ownCloud 8.2:
 ownCloud 8.1:
   1:
     location: ['/version.php']
-    secure_version: '8.1.11'
+    secure_version: '10.0.2'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.1\.[0-9.]+)']
     cve: 'ownCloud 8.1 is end of life.'
     fingerprint: detect_general
@@ -119,7 +130,7 @@ ownCloud 8.1:
 ownCloud 8.0:
   1:
     location: ['/version.php']
-    secure_version: '9.1.3'
+    secure_version: '10.0.2'
     regexp: ['\$OC_VersionString.*?(?P<version>8\.0\.[0-9.]+)']
     cve: 'ownCloud 8.0 is end of life.'
     fingerprint: detect_general
@@ -127,7 +138,7 @@ ownCloud 8.0:
 ownCloud 7:
   1:
     location: ['/version.php']
-    secure_version: '9.1.3'
+    secure_version: '10.0.2'
     regexp: ['\$OC_VersionString.*?(?P<version>7\.[0-9.]+)']
     cve: 'ownCloud 7 is end of life.'
     fingerprint: detect_general
@@ -135,7 +146,7 @@ ownCloud 7:
 ownCloud 6:
   1:
     location: ['/version.php']
-    secure_version: '9.1.3'
+    secure_version: '10.0.2'
     regexp: ['\$OC_VersionString.*?(?P<version>6\.[0-9.]+)']
     cve: 'ownCloud 6 is end of life.'
     fingerprint: detect_general
@@ -143,7 +154,7 @@ ownCloud 6:
 ownCloud 5:
   1:
     location: ['/lib/util.php']
-    secure_version: '9.1.3'
+    secure_version: '10.0.2'
     regexp: ['.*?getVersionString.*?return.*?(?P<version>5\.[0-9.]+)']
     cve: 'ownCloud 5 is end of life.'
     fingerprint: detect_withoutnewlines
@@ -151,7 +162,7 @@ ownCloud 5:
 ownCloud 4:
   1:
     location: ['/lib/util.php']
-    secure_version: '9.1.3'
+    secure_version: '10.0.2'
     regexp: ['.*?getVersionString.*?return.*?(?P<version>4\.[0-9.]+)']
     cve: 'ownCloud 4 is end of life'
     fingerprint: detect_withoutnewlines
