--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -107,7 +107,7 @@
 # CVE-2012-6633 3.3.3   http://codex.wordpress.org/Version_3.3.3
 # CVE-2012-6634 3.3.3
 # CVE-2012-6635 3.3.3
-# CVE-2012-6707
+# CVE-2012-6707 TODO    https://core.trac.wordpress.org/ticket/21022
 # CVE-2013-0235 3.5.1   http://wordpress.org/news/2013/01/wordpress-3-5-1/
 # CVE-2013-0236 3.5.1   http://wordpress.org/news/2013/01/wordpress-3-5-1/
 # CVE-2013-0237 3.5.1   http://wordpress.org/news/2013/01/wordpress-3-5-1/
