--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -1,4 +1,5 @@
 # NOTE: Security support of 1.2 series dropped September 2016 http://www.cmsmadesimple.org/2015/12/Announcing-CMSMS-2-1-Bahamas/ http://www.cmsmadesimple.org/2016/06/CMSMS-1-x-Nears-End-of-Life/
+# NOT-FOR-US: CVE-2017-11405 there is a file upload forms in the admin panel anyways
 # CVE-2005-2846 0.10.1 http://www.securityfocus.com/bid/14709 SA16654
 # CVE-2005-3083 N/A http://www.securityfocus.com/bid/14937
 # CVE-2006-6844 N/A http://www.securityfocus.com/bid/21756
@@ -42,7 +43,11 @@
 # CVE-2017-7256 TODO latest release is vulnerable
 # CVE-2017-7255 TODO latest release is vulnerable
 # CVE-2017-8912 disputed
+# CVE-2017-9668 TODO https://github.com/XiaoZhis/ProjectSend/issues/2
 # TODO          2.2.1 http://www.cmsmadesimple.org/2017/06/Announcing-CMSMS-2-2-1-Hearts-Desire/
+# CVE-2017-11404 TODO
+# CVE-2017-16783 TODO https://www.netsparker.com/web-applications-advisories/ns-17-032-server-side-template-injection-vulnerability-in-cms-made-simple/
+# CVE-2017-16784 TODO https://www.netsparker.com/web-applications-advisories/ns-17-031-reflected-xss-vulnerability-in-cms-made-simple/
 CMSMS:
   1:
     location: ['/version.php']
