--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -114,10 +114,25 @@
 # CVE-2017-0372 1.28.1/1.27.2/1.23.16 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000207.html
 # N/A           1.23.17 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000208.html
 # CVE-2017-0372 1.28.2/1.27.3 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000209.html
+# CVE-2017-8808 1.29.2/1.28.3/1.27.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html
+# CVE-2017-8809 1.29.2/1.28.3/1.27.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html
+# CVE-2017-8810 1.29.2/1.28.3/1.27.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html
+# CVE-2017-8811 1.29.2/1.28.3/1.27.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html
+# CVE-2017-8812 1.29.2/1.28.3/1.27.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html
+# CVE-2017-8814 1.29.2/1.28.3/1.27.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html
+# CVE-2017-8815 1.29.2/1.28.3/1.27.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html
+MediaWiki 1.29:
+  1:
+    location: ['/includes/DefaultSettings.php']
+    secure_version: '1.29.2'
+    regexp: ['\$wgVersion.*?(?P<version>1\.29\.[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-8808 https://nvd.nist.gov/vuln/detail/CVE-2017-8809 https://nvd.nist.gov/vuln/detail/CVE-2017-8810 https://nvd.nist.gov/vuln/detail/CVE-2017-8811 https://nvd.nist.gov/vuln/detail/CVE-2017-8812 https://nvd.nist.gov/vuln/detail/CVE-2017-8814 https://nvd.nist.gov/vuln/detail/CVE-2017-8815 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 MediaWiki 1.28:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.1'
+    secure_version: '1.29.2'
     regexp: ['\$wgVersion.*?(?P<version>1\.28\.[0-9.]{1,})']
     cve: 'MediaWiki 1.28 is end of life.'
     fingerprint: detect_general
@@ -125,9 +140,9 @@ MediaWiki 1.28:
 MediaWiki 1.27:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.3'
+    secure_version: '1.27.4'
     regexp: ['\$wgVersion.*?(?P<version>1\.27\.[0-9.]{1,})']
-    cve: 'https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-April/000209.html https://nvd.nist.gov/vuln/detail/CVE-2017-0372'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-8808 https://nvd.nist.gov/vuln/detail/CVE-2017-8809 https://nvd.nist.gov/vuln/detail/CVE-2017-8810 https://nvd.nist.gov/vuln/detail/CVE-2017-8811 https://nvd.nist.gov/vuln/detail/CVE-2017-8812 https://nvd.nist.gov/vuln/detail/CVE-2017-8814 https://nvd.nist.gov/vuln/detail/CVE-2017-8815 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.26:
