--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1245,6 +1245,7 @@ WordPress plugin ecwid-shopping-cart:
     cve: 'OVE-20160803-0002 https://sumofpwn.nl/advisory/2016/ecwid_ecommerce_shopping_cart_wordpress_plugin_unauthenticated_php_object_injection_vulnerability.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2014-8621 3.12 https://g0blin.co.uk/cve-2014-8621/
 WordPress plugin store-locator-le:
   1:
     location: ['/wp-content/plugins/store-locator-le/readme.txt']
