--- a/yamls/kanboard.yml
+++ b/yamls/kanboard.yml
@@ -7,6 +7,7 @@
 # CVE-2017-15197 1.0.47 https://kanboard.net/news/version-1.0.47 http://www.openwall.com/lists/oss-security/2017/10/04/9
 # CVE-2017-15198 1.0.47 https://kanboard.net/news/version-1.0.47 http://www.openwall.com/lists/oss-security/2017/10/04/9
 # CVE-2017-15199 1.0.47 https://kanboard.net/news/version-1.0.47 http://www.openwall.com/lists/oss-security/2017/10/04/9
+# CVE-2017-15200 1.0.47 https://kanboard.net/news/version-1.0.47
 # CVE-2017-15201 1.0.47 https://kanboard.net/news/version-1.0.47 http://www.openwall.com/lists/oss-security/2017/10/04/9
 # CVE-2017-15202 1.0.47 https://kanboard.net/news/version-1.0.47 http://www.openwall.com/lists/oss-security/2017/10/04/9
 # CVE-2017-15203 1.0.47 https://kanboard.net/news/version-1.0.47 http://www.openwall.com/lists/oss-security/2017/10/04/9
