--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -210,18 +210,19 @@
 # CVE-2017-17092 4.9.1 https://wordpress.org/news/2017/11/wordpress-4-9-1-security-and-maintenance-release/
 # CVE-2017-17093 4.9.1 https://wordpress.org/news/2017/11/wordpress-4-9-1-security-and-maintenance-release/
 # CVE-2017-17094 4.9.1 https://wordpress.org/news/2017/11/wordpress-4-9-1-security-and-maintenance-release/
+# CVE-2018-5776 4.9.2 https://wordpress.org/news/2018/01/wordpress-4-9-2-security-and-maintenance-release/ https://wpvulndb.com/vulnerabilities/9006
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '4.9.1'
+    secure_version: '4.9.2'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2017/11/wordpress-4-9-1-security-and-maintenance-release/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-5776 https://wordpress.org/news/2018/01/wordpress-4-9-2-security-and-maintenance-release/ https://wpvulndb.com/vulnerabilities/9006'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '4.9.1'
+    secure_version: '4.9.2'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2017/11/wordpress-4-9-1-security-and-maintenance-release/'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-5776 https://wordpress.org/news/2018/01/wordpress-4-9-2-security-and-maintenance-release/ https://wpvulndb.com/vulnerabilities/9006'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
