--- a/yamls/bugzilla.yml
+++ b/yamls/bugzilla.yml
@@ -36,19 +36,20 @@
 # CVE-2015-8508 5.0.2/4.4.11/4.2.16 https://bugzilla.mozilla.org/show_bug.cgi?id=1221518 https://www.bugzilla.org/security/4.2.15/
 # CVE-2015-8509 5.0.2/4.4.11/4.2.16 https://bugzilla.mozilla.org/show_bug.cgi?id=1232785 https://www.bugzilla.org/security/4.2.15/
 # CVE-2016-2803 5.0.3/4.4.12 https://bugzilla.mozilla.org/show_bug.cgi?id=1253263 https://www.bugzilla.org/security/4.4.11/
+# CVE-2018-5123 5.0.4/4.4.13
 Bugzilla 5:
   1:
     location: ['/docs/en/xml/bugzilla.ent']
-    secure_version: '5.0.3'
+    secure_version: '5.0.4'
     regexp: ['<!ENTITY bz-ver.*?(?P<version>5\.[0-9]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-2803'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-5123'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Bugzilla 4:
   1:
     location: ['/docs/en/xml/bugzilla.ent']
-    secure_version: '4.4.12'
+    secure_version: '4.4.13'
     regexp: ['<!ENTITY bz-ver.*?(?P<version>4\.[0-9]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2016-2803'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-5123'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
