--- a/yamls/dolibarr.yml
+++ b/yamls/dolibarr.yml
@@ -31,12 +31,13 @@
 # CVE-2017-17898 6.0.5
 # CVE-2017-17899 6.0.5
 # CVE-2017-17900 6.0.5
-# CVE-2017-17971 TODO https://github.com/Dolibarr/dolibarr/issues/8000 No fix 2018-01-07
+# CVE-2017-17971 6.0.5 https://github.com/Dolibarr/dolibarr/issues/8000
+# CVE-2017-1000509 TODO https://github.com/Dolibarr/dolibarr/issues/7727 no fix 2018-02-22
 Dolibarr:
   1:
     location: ['/htdocs/filefunc.inc.php']
     secure_version: '6.0.5'
     regexp: ['.*?DOL_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-17897 https://nvd.nist.gov/vuln/detail/CVE-2017-17898 https://nvd.nist.gov/vuln/detail/CVE-2017-17899 https://nvd.nist.gov/vuln/detail/CVE-2017-17900'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-17897 https://nvd.nist.gov/vuln/detail/CVE-2017-17898 https://nvd.nist.gov/vuln/detail/CVE-2017-17899 https://nvd.nist.gov/vuln/detail/CVE-2017-17900 https://nvd.nist.gov/vuln/detail/CVE-2017-17971'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
