--- a/yamls/x-cart.yml
+++ b/yamls/x-cart.yml
@@ -2,11 +2,12 @@
 # CVE-2015-XXXX 5.2.7 http://blog.curesec.com/article/blog/XCart-526-XSS-84.html
 # CVE-2015-XXXX 5.2.7 http://blog.curesec.com/article/blog/XCart-526-Path-Traversal-85.html
 # CVE-2015-XXXX 5.2.7 http://blog.curesec.com/article/blog/XCart-526-Code-Execution-86.html http://blog.curesec.com/article/blog/XCart-526-Code-Execution-Exploit-87.html
+# CVE-2017-15285 5.3.4 https://sxcurity.github.io/PHP%20Code%20Injection%20in%20X-Cart.pdf
 X-Cart:
   1:
     location: ['/Includes/install/install_settings.php']
-    secure_version: '5.2.7'
+    secure_version: '5.3.4'
     regexp: ['define.*?LC_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://blog.curesec.com/article/blog/XCart-526-XSS-84.html http://blog.curesec.com/article/blog/XCart-526-Path-Traversal-85.html http://blog.curesec.com/article/blog/XCart-526-Code-Execution-86.html'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-15285'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
