ownCloud vulnerability triage

--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -38,6 +38,7 @@
 # oC-SA-2014-006    CVE-2014-2052/CVE-2014-2053/CVE-2014-2054/CVE-2014-2055/CVE-2014-2056   6.0.2/5.0.15    http://owncloud.org/about/security/advisories/oC-SA-2014-006/
 # oC-SA-2014-007    CVE-2014-2057   6.0.2    http://owncloud.org/about/security/advisories/oC-SA-2014-007/
 # oC-SA-2014-008    CVE-2014-2585   6.0.2
+#                   CVE-2014-1665   6.0.1
 # oC-SA-2014-009    CVE-2014-3963   6.0.1
 # oC-SA-2014-010
 # oC-SA-2014-011    CVE-2014-3834   6.0.3
