ownCloud vulnerability triage

--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -35,10 +35,10 @@
 # oC-SA-2014-004
 # oC-SA-2014-005    CVE-2014-2051   6.0.2/5.0.15
 # oC-SA-2014-005
-# oC-SA-2014-006    CVE-2014-2052/CVE-2014-2053/CVE-2014-2054/CVE-2014-2055/CVE-2014-2056   6.0.2/5.0.15    http://owncloud.org/about/security/advisories/oC-SA-2014-006/
-# oC-SA-2014-007    CVE-2014-2057   6.0.2    http://owncloud.org/about/security/advisories/oC-SA-2014-007/
+# oC-SA-2014-006    CVE-2014-2052/CVE-2014-2053/CVE-2014-2054/CVE-2014-2055/CVE-2014-2056   6.0.2/5.0.15
+# oC-SA-2014-007    CVE-2014-2057   6.0.2
 # oC-SA-2014-008    CVE-2014-2585   6.0.2
-#                   CVE-2014-1665   6.0.1
+#                   CVE-2014-1665   6.0.1 http://blog.noobroot.com/2014/02/owncloud-600a-when-xss-vulnerability.html
 # oC-SA-2014-009    CVE-2014-3963   6.0.1
 # oC-SA-2014-010
 # oC-SA-2014-011    CVE-2014-3834   6.0.3
