--- a/yamls/dolibarr.yml
+++ b/yamls/dolibarr.yml
@@ -37,11 +37,14 @@
 # CVE-2017-17900 6.0.5
 # CVE-2017-17971 6.0.5 https://github.com/Dolibarr/dolibarr/issues/8000
 # CVE-2017-1000509 7.0 https://github.com/Dolibarr/dolibarr/issues/7727
+# CVE-2018-10092 7.0.2 http://www.openwall.com/lists/oss-security/2018/05/21/2
+# CVE-2018-10094 7.0.2 http://www.openwall.com/lists/oss-security/2018/05/21/1
+# CVE-2018-10095 7.0.2 http://www.openwall.com/lists/oss-security/2018/05/21/3
 Dolibarr:
   1:
     location: ['/htdocs/filefunc.inc.php']
-    secure_version: '7.0'
+    secure_version: '7.0.2'
     regexp: ['.*?DOL_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-1000509'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-10092 http://www.openwall.com/lists/oss-security/2018/05/21/2 https://nvd.nist.gov/vuln/detail/CVE-2018-10094 http://www.openwall.com/lists/oss-security/2018/05/21/1 https://nvd.nist.gov/vuln/detail/CVE-2018-10095 http://www.openwall.com/lists/oss-security/2018/05/21/3'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
