--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -33,7 +33,7 @@
 # CVE-2017-10680 2.9.2 https://github.com/Piwigo/Piwigo/issues/721
 # CVE-2017-10681 2.9.2 https://github.com/Piwigo/Piwigo/issues/721
 # CVE-2017-10682 2.9.2 https://github.com/Piwigo/Piwigo/issues/724
-# CVE-2017-16893 TODO
+# CVE-2017-16893 TODO https://github.com/Piwigo/Piwigo/issues/804
 # CVE-2017-17775 TODO
 # CVE-2017-17774 TODO
 # CVE-2017-17822 TODO
