--- a/yamls/modxrevolution.yml
+++ b/yamls/modxrevolution.yml
@@ -18,7 +18,7 @@
 # CVE-2017-9069 2.5.7
 # CVE-2017-9070 2.5.7
 # CVE-2017-9071 2.5.7
-# CVE-2017-11744 N/A https://github.com/modxcms/revolution/issues/13564 no information available which version fixes this in over year
+# CVE-2017-11744 2.6.4 https://github.com/modxcms/revolution/issues/13564
 # CVE-2017-1000067 2.5.4
 # CVE-2017-1000223 2.5.7
 # CVE-2018-10382 2.6.4
