--- a/yamls/modxrevolution.yml
+++ b/yamls/modxrevolution.yml
@@ -12,7 +12,7 @@
 # CVE-2017-7322
 # CVE-2017-7323
 # CVE-2017-7324
-# CVE-2017-8115 N/A https://github.com/modxcms/revolution/issues/13432 2.5.7 is affected. no information available which version fixes this in over 450 days
+# CVE-2017-8115 2.6.0 https://github.com/modxcms/revolution/issues/13432 https://github.com/modxcms/revolution/pull/13433
 # CVE-2017-9067 2.5.7 https://citadelo.com/en/2017/04/modx-revolution-cms/
 # CVE-2017-9068 2.5.7
 # CVE-2017-9069 2.5.7
