--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -50,8 +50,8 @@
 Piwigo:
   1:
     location: ['/include/constants.php']
-    secure_version: '2.9.3'
+    secure_version: '2.9.4'
     regexp: ['define.*?PHPWG_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-6883 https://nvd.nist.gov/vuln/detail/CVE-2017-17827 http://piwigo.org/releases/2.9.3'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-5692 https://nvd.nist.gov/vuln/detail/CVE-2018-7722 https://nvd.nist.gov/vuln/detail/CVE-2018-7724 http://piwigo.org/forum/viewtopic.php?id=28779 http://piwigo.org/releases/2.9.4'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
