--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -83,12 +83,13 @@
 # https://drupal.org/SA-CORE-2018-002   CVE-2018-7600   8.5.1/7.58
 # https://drupal.org/SA-CORE-2018-003   TODO            8.5.2/8.4.7
 # https://drupal.org/SA-CORE-2018-004   CVE-2018-7602   8.5.3/8.4.8/7.59
+# https://drupal.org/SA-CORE-2018-005   CVE-2018-14773  8.5.6
 Drupal 8:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.5.3'
+    secure_version: '8.5.6'
     regexp: ["  const VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-7602 https://drupal.org/SA-CORE-2018-004'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-14773 https://drupal.org/SA-CORE-2018-005'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
