--- a/yamls/mediawiki.yml
+++ b/yamls/mediawiki.yml
@@ -121,18 +121,38 @@
 # CVE-2017-8812 1.29.2/1.28.3/1.27.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html
 # CVE-2017-8814 1.29.2/1.28.3/1.27.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html
 # CVE-2017-8815 1.29.2/1.28.3/1.27.4 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html
+# CVE-2018-0503 1.31.1/1.30.1/1.29.3/1.27.5 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html
+# CVE-2018-0504 1.31.1/1.30.1/1.29.3/1.27.5 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html
+# CVE-2018-0505 1.31.1/1.30.1/1.29.3/1.27.5 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html
+# CVE-2018-13258 1.31.1
+MediaWiki 1.31:
+  1:
+    location: ['/includes/DefaultSettings.php']
+    secure_version: '1.31.1'
+    regexp: ['\$wgVersion.*?(?P<version>1\.29\.[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-0503 https://nvd.nist.gov/vuln/detail/CVE-2018-0504 https://nvd.nist.gov/vuln/detail/CVE-2018-0505 https://nvd.nist.gov/vuln/detail/CVE-2018-13258 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+MediaWiki 1.30:
+  1:
+    location: ['/includes/DefaultSettings.php']
+    secure_version: '1.30.1'
+    regexp: ['\$wgVersion.*?(?P<version>1\.29\.[0-9.]{1,})']
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-0503 https://nvd.nist.gov/vuln/detail/CVE-2018-0504 https://nvd.nist.gov/vuln/detail/CVE-2018-0505 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 MediaWiki 1.29:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.2'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.29\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-8808 https://nvd.nist.gov/vuln/detail/CVE-2017-8809 https://nvd.nist.gov/vuln/detail/CVE-2017-8810 https://nvd.nist.gov/vuln/detail/CVE-2017-8811 https://nvd.nist.gov/vuln/detail/CVE-2017-8812 https://nvd.nist.gov/vuln/detail/CVE-2017-8814 https://nvd.nist.gov/vuln/detail/CVE-2017-8815 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-0503 https://nvd.nist.gov/vuln/detail/CVE-2018-0504 https://nvd.nist.gov/vuln/detail/CVE-2018-0505 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.28:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.2'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.28\.[0-9.]{1,})']
     cve: 'MediaWiki 1.28 is end of life.'
     fingerprint: detect_general
@@ -140,15 +160,15 @@ MediaWiki 1.28:
 MediaWiki 1.27:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.27.4'
+    secure_version: '1.27.5'
     regexp: ['\$wgVersion.*?(?P<version>1\.27\.[0-9.]{1,})']
-    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2017-8808 https://nvd.nist.gov/vuln/detail/CVE-2017-8809 https://nvd.nist.gov/vuln/detail/CVE-2017-8810 https://nvd.nist.gov/vuln/detail/CVE-2017-8811 https://nvd.nist.gov/vuln/detail/CVE-2017-8812 https://nvd.nist.gov/vuln/detail/CVE-2017-8814 https://nvd.nist.gov/vuln/detail/CVE-2017-8815 https://lists.wikimedia.org/pipermail/mediawiki-announce/2017-November/000216.html'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-0503 https://nvd.nist.gov/vuln/detail/CVE-2018-0504 https://nvd.nist.gov/vuln/detail/CVE-2018-0505 https://lists.wikimedia.org/pipermail/mediawiki-announce/2018-September/000223.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 MediaWiki 1.26:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.1'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.26\.[0-9.]{1,})']
     cve: 'MediaWiki 1.26 is end of life.'
     fingerprint: detect_general
@@ -156,7 +176,7 @@ MediaWiki 1.26:
 MediaWiki 1.25:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.1'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.25\.[0-9.]{1,})']
     cve: 'MediaWiki 1.25 is end of life.'
     fingerprint: detect_general
@@ -164,7 +184,7 @@ MediaWiki 1.25:
 MediaWiki 1.24:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.1'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.24\.[0-9.]{1,})']
     cve: 'MediaWiki 1.24 is end of life.'
     fingerprint: detect_general
@@ -172,7 +192,7 @@ MediaWiki 1.24:
 MediaWiki 1.23:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.1'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.23\.[0-9.]{1,})']
     cve: 'MediaWiki 1.23 is end of life.'
     fingerprint: detect_general
@@ -180,7 +200,7 @@ MediaWiki 1.23:
 MediaWiki 1.22:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.1'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.22\.[0-9.]{1,})']
     cve: 'MediaWiki 1.22 is end of life.'
     fingerprint: detect_general
@@ -188,7 +208,7 @@ MediaWiki 1.22:
 MediaWiki 1.21:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.1'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.21\.[0-9.]{1,})']
     cve: 'MediaWiki 1.21 is end of life.'
     fingerprint: detect_general
@@ -196,7 +216,7 @@ MediaWiki 1.21:
 MediaWiki 1.20:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.1'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.20\.[0-9.]{1,})']
     cve: 'MediaWiki 1.20.x is end of life.'
     fingerprint: detect_general
@@ -204,7 +224,7 @@ MediaWiki 1.20:
 MediaWiki 1.19:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.1'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.19\.[0-9.]{1,})']
     cve: 'MediaWiki 1.19.x is end of life.'
     fingerprint: detect_general
@@ -212,7 +232,7 @@ MediaWiki 1.19:
 MediaWiki 1.18:
   1:
     location: ['/includes/DefaultSettings.php']
-    secure_version: '1.29.1'
+    secure_version: '1.29.3'
     regexp: ['\$wgVersion.*?(?P<version>1\.1[0-8]\.[0-9.]{1,})']
     cve: 'MediaWiki 1.18.x is end of life.'
     fingerprint: detect_general
