--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -281,7 +281,7 @@ WordPress plugin the-holiday-calendar:
     location: ['/wp-content/plugins/the-holiday-calendar/readme.txt']
     secure_version: '1.11.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/fulldisclosure/2015/Jul/125'  # contacted Pedreira to notify about CVE assigment. CVE request done by Pedreira 2015-07-20
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9270 http://seclists.org/fulldisclosure/2015/Jul/125'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin newsletter:
