--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2577,6 +2577,6 @@ WordPress plugin wordpress-mobile-pack:
     location: ['/wp-content/plugins/wordpress-mobile-pack/readme.txt']
     secure_version: '2.1.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://seclists.org/fulldisclosure/2015/Jul/97'  # TODO: CVE requested 2018-10-01 with ID 577499
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9269 https://seclists.org/fulldisclosure/2015/Jul/97 https://www.openwall.com/lists/oss-security/2015/07/19/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
