--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -525,9 +525,7 @@ WordPress plugin gwolle-gb:
     location: ['/wp-content/plugins/gwolle-gb/readme.txt']
     secure_version: '2.5.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    # TODO: CVE requested 2018-07-29
-    # TODO: CVE re-requested 2018-10-2
-    cve: 'http://seclists.org/bugtraq/2018/Jul/74 http://www.defensecode.com/advisories/DC-2018-05-008_WordPress_Gwolle_Guestbook_Plugin_Advisory.pdf'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-17884 http://seclists.org/bugtraq/2018/Jul/74 http://www.defensecode.com/advisories/DC-2018-05-008_WordPress_Gwolle_Guestbook_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin role-scoper:
