--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -2035,8 +2035,7 @@ WordPress plugin slideshow-gallery:
     location: ['/wp-content/plugins/slideshow-gallery/readme.txt']
     secure_version: '1.6.6'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    # TODO: CVE requested 2018-10-02
-    cve: 'http://www.defensecode.com/advisories/DC-2017-01-014_WordPress_Tribulant_Slideshow_Gallery_Plugin_Advisory.pdf'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2018-17946 http://www.defensecode.com/advisories/DC-2017-01-014_WordPress_Tribulant_Slideshow_Gallery_Plugin_Advisory.pdf'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin Magic-Fields:
