--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -4,8 +4,7 @@ WordPress plugin videowhisper-video-conference-integration:
     location: ['/wp-content/plugins/videowhisper-video-conference-integration/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    # TODO: CVE requested 2018-10-04
-    cve: 'https://www.openwall.com/lists/oss-security/2015/04/01/3 http://www.vapid.dhs.org/advisory.php?v=116'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9271 https://www.openwall.com/lists/oss-security/2015/04/01/3 http://www.vapid.dhs.org/advisory.php?v=116'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin videowhisper-video-presentation:
