--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -278,8 +278,7 @@ WordPress plugin wp-slimstat:
     location: ['/wp-content/plugins/wp-slimstat/readme.txt']
     secure_version: '4.1.6.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    # TODO: CVE re-requested 2018-10-07 with ID 581340
-    cve: 'https://www.openwall.com/lists/oss-security/2015/07/30/1'
+    cve: 'https://nvd.nist.gov/vuln/detail/CVE-2015-9273 https://www.openwall.com/lists/oss-security/2015/07/30/1'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin the-holiday-calendar:
