--- a/yamls/vanillaforums.yml
+++ b/yamls/vanillaforums.yml
@@ -14,7 +14,7 @@
 # http://www.henryhoggard.co.uk/security/vanilla-tagging-stored-xss/
 # CVE-2017-1000432 2.1.5 https://open.vanillaforums.com/discussion/28337/vanilla-2-1-5-released-and-2-0-18-14
 # CVE-2018-16410 2.6.1 https://open.vanillaforums.com/discussion/36559 https://hackerone.com/reports/353784
-# CVE-2018-17571 TODO https://hackerone.com/reports/361957
+# CVE-2018-17571 2.6.1 https://hackerone.com/reports/361957
 # CVE-2018-19499 2.6.2/2.5.5 https://hackerone.com/reports/407552
 # CVE-2018-18903 2.6.4 https://github.com/vanilla/vanilla/releases/tag/Vanilla_2.6.4 https://open.vanillaforums.com/discussion/36771/security-update-vanilla-2-6-4
 Vanilla Forums:
